File apps/ledger-live-desktop/static/i18n/en/app.json was translated to ru-RU locale

--- a/apps/ledger-live-desktop/static/i18n/ru/app.json
+++ b/apps/ledger-live-desktop/static/i18n/ru/app.json
@@ -169,10 +169,7 @@
       "WITHDRAW" : "Вывод",
       "REVOKE" : "Отозвано",
       "ACTIVATE" : "Активировано",
-      "REGISTER" : "Зарегистрировано",
-      "STAKE" : "В стейкинге",
-      "UNSTAKE" : "Выведено из стейкинга",
-      "WITHDRAW_UNSTAKED" : "Вывод"
+      "REGISTER" : "Зарегистрировано"
     }
   },
   "byteSize" : {
@@ -2078,6 +2075,14 @@
           "dismiss" : "Позже",
           "stake" : "Стейкайте с {{provider}}"
         },
+        "ethereum" : {
+          "title" : "Приумножайте ваши ETH. Начните стейкать прямо сейчас.",
+          "description" : "Стейкайте ETH в Lido и получайте вознаграждения. Без периода блокировки и минимальной суммы.",
+          "kiln" : {
+            "title" : "Не ограничивайтесь ходлом. Приумножайте ваши ETH.",
+            "description" : "У вас больше 32 ETH? Тогда наслаждайтесь безопасным стейкингом эфиров с Kiln и получайте пассивный доход."
+          }
+        },
         "cosmos" : {
           "title" : "Приумножайте ATOM. Стейкайте с помощью валидатора Ledger.",
           "description" : "Стейкайте ATOM с помощью надёжного валидатора Ledger. Монеты остаются вашими, а их безопасность обеспечивает Ledger."
@@ -2138,8 +2143,8 @@
         "ethereumGasPrice" : "Цена Газа",
         "ethereumMaxFee" : "Макс. комиссия ({{unitName}})",
         "ethereumPriorityFee" : "Макс. комиссия за приоритет ({{unitName}})",
-        "nextBlock" : "Следующий блок",
-        "suggested" : "Рекомендовано",
+        "nextBlock" : "Следующий блок: {{nextBaseFee}}",
+        "suggestedPriorityFee" : "Рекомендовано: {{lowPriorityFee}} - {{highPriorityFee}} {{unitName}}",
         "unitPerByte" : "{{unit}} за байт",
         "nft" : "NFT",
         "nftQuantity" : "Количество"
@@ -3391,155 +3396,6 @@
       }
     }
   },
-  "ethereum" : {
-    "stake" : {
-      "title" : "Приумножайте ETH",
-      "lido" : {
-        "tag" : "Без минимальной суммы",
-        "description" : "Застейкайте эфиры (ETH) через Lido и получайте ежедневные вознаграждения. Причём без периода блокировки и минимальной суммы."
-      },
-      "kiln" : {
-        "tag" : "От 32 ETH",
-        "description" : "У вас больше 32 ETH? Тогда наслаждайтесь безопасным стейкингом эфиров через Kiln и получайте ежедневные вознаграждения."
-      },
-      "providerTitle" : "Получайте вознаграждения с {{provider}}",
-      "providerLink" : "Подробнее о {{provider}}"
-    }
-  },
-  "near" : {
-    "account" : {
-      "stakedBalance" : "Стейкается",
-      "stakedBalanceTooltip" : "Актуальная сумма в стейкинге с валидаторами.",
-      "availableBalance" : "Доступно для вывода",
-      "availableBalanceTooltip" : "Эта сумма криптоактивов была выведена из стейкинга и уже доступна.",
-      "pendingBalance" : "Неподтверждённый баланс",
-      "pendingBalanceTooltip" : "Эта сумма криптоактивов была выведена из стейкинга и скоро будет доступна.",
-      "storageUsageBalance" : "Минимальный баланс",
-      "storageUsageBalanceTooltip" : "Данная сумма зарезервирована для хранения и транзакций. Она также является минимальным балансом для сохранения активности счёта.",
-      "subHeader" : {
-        "cardTitle" : "Powered by Figment",
-        "moreInfo" : "Подробнее",
-        "drawerTitle" : "Powered by Figment",
-        "title" : "Токен NEAR теперь доступен в Ledger Live",
-        "description" : "Теперь вы можете управлять своими токенами NEAR и хранить их в Ledger Live.",
-        "description2" : "Токен NEAR — нативная монета блокчейна NEAR, которая используется для всех транзакций, стейкинга и множества предстоящих функций.",
-        "website" : "Powered by Figment"
-      }
-    },
-    "operationDetails" : {
-      "extra" : {
-        "stakedAmount" : "В стейкинге"
-      }
-    },
-    "stake" : {
-      "emptyState" : {
-        "description" : "Вы можете получать вознаграждения в NEAR посредством стейкинга криптоактивов.",
-        "info" : "Как работает стейкинг",
-        "earnRewards" : "Получить вознаграждения"
-      },
-      "table" : {
-        "header" : "Позиции в стейкинге",
-        "stake" : "Дополнить",
-        "staked" : "В стейкинге",
-        "pending" : "Ожидает вывода",
-        "available" : "Доступно для вывода"
-      },
-      "unstake" : "Вывести из стейкинга",
-      "withdraw" : "Вывод средств",
-      "activeTooltip" : "Стейкинг приносит вознаграждения",
-      "inactiveTooltip" : "Без стейкинга средства не приносят вознаграждения",
-      "commission" : "Комиссия",
-      "totalStake" : "Общий пул",
-      "minSafeWarning" : "Недостаточно средств",
-      "flow" : {
-        "title" : "Стейкинг",
-        "steps" : {
-          "starter" : {
-            "description" : "Вы можете получать вознаграждения, стейкая NEAR валидатору.",
-            "bullet" : ["Застейканные активы остаются в вашей собственности", "Застейкайте активы с помощью устройства Ledger", "Активы станут доступны через 52-65 часов после отмены стейкинга"],
-            "warning" : {
-              "description" : "Выбирайте валидатора с умом. Часть застейканных активов может быть безвозвратно утеряна, если валидатор поведёт себя недобросовестно."
-            }
-          },
-          "amount" : {
-            "title" : "Сумма"
-          },
-          "validator" : {
-            "title" : "Валидаторы",
-            "ledgerByFigmentTC" : "Положения и условия Ledger by Figment"
-          },
-          "connectDevice" : {
-            "title" : "Устройство"
-          },
-          "confirmation" : {
-            "title" : "Подтверждение",
-            "success" : {
-              "title" : "Вы успешно застейкали активы",
-              "text" : "Баланс обновится после подтверждения транзакции в блокчейне.",
-              "cta" : "Подробнее"
-            },
-            "broadcastError" : "Возможно, ваша транзакция не прошла. Пожалуйста, подождите немного, а затем проверьте историю транзакций, прежде чем повторить попытку."
-          }
-        }
-      }
-    },
-    "unstake" : {
-      "disabledTooltip" : "Недостаточно активов в стейкинге для вывода из него",
-      "flow" : {
-        "title" : "Вывести из стейкинга",
-        "steps" : {
-          "amount" : {
-            "title" : "Сумма",
-            "subtitle" : "Процедура отмены стейкинга занимает <0>52-65 часов</0>.",
-            "warning" : "Вознаграждения будут немедленно сняты. Выведенная из стейкинга сумма вернётся на доступный баланс по истечении <0>блокировки длительностью от 52 до 65 часов</0>.",
-            "fields" : {
-              "validator" : "Валидатор",
-              "amount" : "Сумма вывода из стейкинга"
-            }
-          },
-          "connectDevice" : {
-            "title" : "Устройство"
-          },
-          "confirmation" : {
-            "title" : "Подтверждение",
-            "success" : {
-              "title" : "Вы успешно вывели активы из стейкинга.",
-              "description" : "<0>{{amount}}</0> было выведено из стейкинга <0>{{validator}}</0>",
-              "cta" : "Подробнее"
-            },
-            "broadcastError" : "Возможно, ваша транзакция не прошла. Пожалуйста, подождите немного, а затем проверьте историю транзакций, прежде чем повторить попытку."
-          }
-        }
-      }
-    },
-    "withdraw" : {
-      "disabledTooltip" : "Недостаточно активов для вывода",
-      "flow" : {
-        "title" : "Вывод средств",
-        "steps" : {
-          "amount" : {
-            "title" : "Сумма",
-            "fields" : {
-              "validator" : "Валидатор",
-              "amount" : "Сумма вывода"
-            }
-          },
-          "connectDevice" : {
-            "title" : "Устройство"
-          },
-          "confirmation" : {
-            "title" : "Подтверждение",
-            "success" : {
-              "title" : "Вы успешно вывели средства.",
-              "description" : "<0>{{amount}}</0> было выведено от <0>{{validator}}</0>",
-              "cta" : "Подробнее"
-            },
-            "broadcastError" : "Возможно, ваша транзакция не прошла. Пожалуйста, подождите немного, а затем проверьте историю транзакций, прежде чем повторить попытку."
-          }
-        }
-      }
-    }
-  },
   "delegation" : {
     "title" : "Получить вознаграждения",
     "header" : "Делегирование",
@@ -3749,6 +3605,10 @@
     "experimental" : {
       "disclaimer" : "Это Экспериментальные функции, предоставляемые на условиях «как есть» для нашего сообщества технических энтузиастов. Эти функции могут быть изменены, заблокированы или удалены в любое время. Активируя их, вы принимаете на себя все риски использования.",
       "features" : {
+        "apiTrongridProxy" : {
+          "title" : "Использовать TronGrid.io",
+          "description" : "Использовать TronGrid напрямую без прокси Ledger."
+        },
         "experimentalCurrencies" : {
           "title" : "Экспериментальная интеграция",
           "description" : "Использовать доступные экспериментальные интеграции криптовалют."
@@ -4652,9 +4512,6 @@
       "claimRewardCompound" : "валидатор, который получит вознаграждение",
       "optIn" : "получатель",
       "nominate" : "валидатор",
-      "stake" : "валидатор",
-      "unstake" : "валидатор",
-      "withdraw" : "валидатор",
       "erc721" : {
         "transfer" : "получатель"
       },
@@ -5004,10 +4861,6 @@
     "NotEnoughGas" : {
       "title" : "Баланса на основном счету недостаточно для покрытия комиссии сети"
     },
-    "OperatingSystemOutdated" : {
-      "title" : "Ваша версия ОС устарела",
-      "description" : "Обновите операционную систему и попробуйте снова. Почему Ledger Live не поддерживается вашей нынешней версией ОС? Подробнее об этом написано в статье ниже."
-    },
     "PasswordsDontMatch" : {
       "title" : "Пароли не совпадают",
       "description" : "Повторите попытку"
@@ -5250,7 +5103,7 @@
       "title" : "Сумма для разморозки не может быть меньше 1"
     },
     "TronSendTrc20ToNewAccountForbidden" : {
-      "title" : "Чтобы активировать приём токенов TRC-20, на этот адрес начала нужно отправить не менее 0,1 TRX.",
+      "title" : "Чтобы активировать приём токенов TRC-20, на этот адрес сначала нужно отправить минимум 0,1 TRX.",
       "description" : "Счёт получателя нужно активировать перед отправкой на него токенов TRC-20. Чтобы активировать его, отправьте на него токены TRX или TRC-10."
     },
     "TronUnexpectedFees" : {
@@ -5264,7 +5117,7 @@
       "description" : "Транзакцию необходимо подписать в течение 30 секунд. Пожалуйста, попробуйте ещё раз."
     },
     "TronNotEnoughEnergy" : {
-      "title" : "Не хватает баллов Энергии. Вы можете заплатить комиссию до 20 TRX."
+      "title" : "Недостаточно баллов Energy (Энергии) для отправки токена"
     },
     "PairingFailed" : {
       "title" : "Не удалось подключить устройство",
@@ -5415,9 +5268,6 @@
     "StellarSourceHasMultiSign" : {
       "title" : "Отключите функцию мультиподписи, чтобы проводить транзакции в Stellar"
     },
-    "StellarBurnAddressError" : {
-      "title" : "При попытке добавления счёта Stellar возникла проблема"
-    },
     "HederaAddAccountError" : {
       "title" : "Не удалось добавить счёт. Пожалуйста, попробуйте ещё раз."
     },
@@ -5464,30 +5314,6 @@
     "ImageLoadRefusedOnDevice" : {
       "title" : "В загрузке изображения отказано на устройстве (TODO: final wording)",
       "description" : "Если это изображение не подошло, вы можете попробовать другое."
-    },
-    "NearNewAccountWarning" : {
-      "title" : "Адрес получателя ещё не создан. Для его создания протокол требует перевод {{formattedNewAccountStorageCost}}."
-    },
-    "NearNewNamedAccountError" : {
-      "title" : "Адрес получателя ещё не создан. Его нужно создать в кошельке NEAR."
-    },
-    "NearActivationFeeNotCovered" : {
-      "title" : "Данная сумма не покрывает стоимость хранения {{formattedNewAccountStorageCost}}."
-    },
-    "NearUseAllAmountStakeWarning" : {
-      "title" : "Убедитесь, что баланса хватит на комиссию"
-    },
-    "NearNotEnoughStaked" : {
-      "title" : "Недостаточный баланс в стейкинге"
-    },
-    "NearNotEnoughAvailable" : {
-      "title" : "Недостаточный баланс для вывода"
-    },
-    "NearRecommendUnstake" : {
-      "title" : "Пожалуйста, выведите средства из стейкинга и снимите их со счёта перед тем, как вывести с него все активы"
-    },
-    "NearStakingThresholdNotMet" : {
-      "title" : "Сумма должна быть не менее {{threshold}}"
     },
     "LockedDeviceError" : {
       "title" : "Устройство заблокировано",
